# openai-agents-saas-starter

./: .cursorignore  .cursorrules  .dockerignore  .env.compose  .env.compose.example  .env.example  .env.local.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  ISSUE_TRACKER.md  LICENSE  MILESTONE_AUTH_EDDSA_TRACKER.md  MILESTONE_AUTH_IDP_TRACKER.md  MILESTONE_PERSISTENCE_TRACKER.md  Makefile  README.md  conftest.py  docker-compose.vault-dev.yml  docker-compose.yml  env-overlaps-report.txt  error.md  justfile  messages.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  tmp.env  tmp.txt  trivy-secret.yaml  tsconfig.scripts.json
.claude/agents/: documentation-researcher.md
.claude/commands/: commit.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  build-images.yml  chaos-manual.yml  cli-ci.yml  codeql.yml  contracts-ci.yml  dependency-review.yml  frontend-ci.yml  perf-smoke.yml  providers-ci.yml  release.yml  secrets-scan.yml
agent-next-15-frontend/: .cursorignore  .gitignore  README.md  SNAPSHOT.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
agent-next-15-frontend/.storybook/: main.ts
agent-next-15-frontend/app/: globals.css  layout.tsx  providers.tsx
agent-next-15-frontend/hooks/: useAuthForm.ts  useBillingStream.ts  useConversations.ts  useSilentRefresh.ts
agent-next-15-frontend/seeds/: playwright.yaml
agent-next-15-frontend/tests/: README.md  app-regressions.spec.ts  auth-smoke.spec.ts
agent-next-15-frontend/types/: agents.ts  billing.ts  conversations.ts  serviceAccounts.ts  session.ts  status.ts  tenantSettings.ts  tools.ts
anything-agents/: .gitignore  README.md  SNAPSHOT.md  alembic.ini  main.py
anything-agents/alembic/: README.md  env.py
anything-agents/app/: __init__.py
anything-agents/tests/: __init__.py  conftest.py  test_agents.py  test_health.py  test_streaming.py  test_tools.py
anything_agents/: __init__.py
anything_agents/cli/: __init__.py  __main__.py  auth_commands.py  common.py  console.py  main.py  stripe_commands.py
api-service/: README.md  alembic.ini  justfile  main.py  pyproject.toml  pyrightconfig.json  test.db
api-service/.artifacts/: openapi-billing-fixtures.json  openapi-billing.json
api-service/alembic/: README.md  env.py  script.py.mako
api-service/app/: __init__.py
api-service/src/: main.py
api-service/tests/: conftest.py
apps/api-service/: .env.example  .env.local.example  .envrc  .gitignore  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml  pyrightconfig.json  test.db
apps/web-app/: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  eslint.config.mjs  justfile  knip.json  next.config.ts  openapi-ts.config.ts  openapi-ts.fixtures.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.mts  vitest.setup.ts
docs/: CONTRACTS.md  example-stripe-script-from-other-codebase-for-reference.md  release_notes_v0.1.1.md
docs/architecture/: adr-agent-workflows.md  authentication-ed25519.md  fast-api-endpoints.md  repo-layout.md  sdk-session-runbook.md  services-ownership.md  services_dependency_snapshot.md  status-alert-subscriptions.md  structured-logging.md
docs/auth/: idp.md  roles.md  tenant-identifier-policy.md
docs/billing/: stripe-runbook.md  stripe-setup.md
docs/contracts/: provider_literals.json  settings.md  settings.schema.json  setup-profiles.md
docs/environments/: .gitignore  README.md  production.answers.template.json  staging.answers.template.json
docs/frontend/: data-access.md
docs/integrations/: slack.md
docs/marketing/: README.md
docs/observability/: README.md  activity-log.md  geoip.md
docs/ops/: container-deployments.md  db-release-playbook.md  hosting-aws.md  hosting-azure.md  hosting-gcp.md  hosting-kubernetes.md  hosting-overview.md  hosting-vps.md  justfile-commands.md  provider-parity.md  resend-email-runbook.md  retention.md  run_events_dashboard_spec.md  runbook-release.md  setup-wizard-presets.md  sso-oidc-runbook.md  starter-console-cli.md  terraform-export.md  usage-guardrails-runbook.md
docs/persistence/: db-schema.md
docs/runbooks/: agents.md  run_events.md
docs/scripts/: stripe-setup.md
docs/security/: auth-review-brief.md  auth-service-cli-spec.md  auth-threat-model.md  jwt-consumer-matrix.md  key-rotation-playbook.md  mfa-roadmap.md  secrets-providers.md  vault-transit-signing.md
docs/testing/: non-functional.md
docs/trackers/: BACKEND-AND-CLI-STATUS.md  CLI_ENV_INVENTORY.md  CLI_MILESTONE.md  CONSOLE_ENV_INVENTORY.md  CONSOLE_MILESTONE.md  FRONTEND_UI_STORIES.md  ISSUE_TRACKER.md  MILESTONE_AUTH_SIGNUP_GUARDRAILS.md  MILESTONE_CLI_HOME_HUB.md  MILESTONE_CONTRACTS_HARDENING.md  MILESTONE_DEV_USER_AUTOMATION.md  MILESTONE_FE_107_BILLING_CLIENT_GUARD.md  MILESTONE_FRONTEND_UI_COMPLETION.md  MILESTONE_FRONTEND_UI_FOUNDATION.md  MILESTONE_HOME_PROBES.md  MILESTONE_LOGGING_ENHANCEMENTS.md  MILESTONE_MULTI_PROVIDER_SECRETS.md  MILESTONE_NEXT16_UPGRADE.md  MILESTONE_PERSISTENCE_TRACKER.md  MILESTONE_PLAYWRIGHT_CRITICAL_FLOWS.md  MILESTONE_SERVICE_ARCHITECTURE_REORG.md  MILESTONE_SERVICE_WIRING_TRACKER.md  (+7 more)
scripts/: README.md  assert-billing-openapi.js  check_secrets.py  ensure_dev_user_and_print.py  export_openapi.py  moduleviz.py  run_with_env.py  seed_users.py  typecheck.py
starter_cli/: README.md  __init__.py  app.py  container.py  pyproject.toml
starter_contracts/: config.py  keys.py  provider_validation.py  pyproject.toml  vault_kv.py
starter_shared/: config.py  keys.py  provider_validation.py  vault_kv.py
tools/: README.md  __init__.py  assert-billing-openapi.js  assert-openapi-artifacts.js  check_markdown_links.py  check_secrets.py  moduleviz.py  typecheck.py
web-app/: README.md  eslint.config.mjs  middleware.ts  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.setup.ts
(+4247 files in other folders)
